# nv1

./: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: build_commands.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
nv1-hub-stm32/: Cargo.toml
nv1-hub-stm32/.cargo/: config.toml
nv1-hub-ui-tester/: Cargo.toml
nv1-hub-ui-tester/src/: main.rs
nv1-md/: .gitignore  Cargo.toml
nv1-md/.cargo/: config.toml
nv1-msg/: Cargo.toml
nv1-msg/src/: hub.rs  md.rs
nv1-ros/: Cargo.toml
nv1-ros/models/: model_v1.94.onnx  model_v2.0.onnx  model_v2.1.onnx
nv1-ros/nv1-ros-communicator/: Cargo.toml
nv1-ros/nv1-ros-communicator/src/: main.rs
nv1-ros/nv1-ros-onnx/: Cargo.toml
nv1-ros/nv1-ros-onnx/src/: main.rs
nv1-ros/nv1-ros-opencv/: Cargo.toml
nv1-ros/nv1-ros-opencv/src/: main.rs
nv1-stm/: Cargo.toml
nv1-stm/.cargo/: config.toml
nv1-stm/nv1-hub-stm32/src/: main.rs  neo_pixel.rs  settings.rs
nv1-stm/nv1-hub-ui-tester/: Cargo.toml
nv1-stm/nv1-hub-ui/src/: menu.rs
nv1-stm/nv1-md/: Cargo.toml
nv1-stm/nv1-md/src/: main.rs  motor.rs
nv1-stm32-hub/: Cargo.toml
nv1-stm32-hub/.cargo/: config.toml
nv1-stm32-hub/nv1-hub/: Cargo.toml
nv1-stm32-hub/nv1-hub-stm32/: Cargo.toml
nv1-stm32-hub/nv1-hub-stm32/src/: communication.rs  constants.rs  main.rs  multiplexer.rs  sensors.rs
nv1-stm32-hub/nv1-hub-ui-tester/src/: main.rs
nv1-stm32-hub/nv1-hub-ui/src/: elements.rs  lib.rs  menu.rs
nv1-stm32-hub/nv1-hub/src/: communication.rs  constants.rs  hardware.rs  main.rs  main_loop.rs  motor_controller.rs  neo_pixel.rs  sensors.rs  settings.rs  types.rs  ui_system.rs
nv1-stm32-md/: .gitignore  Cargo.toml
nv1-stm32-md/src/: main.rs  motor.rs
