cargo-features = ["per-package-target"]

[package]
edition = "2021"
name = "nv1-md"
version = "0.1.0"
forced-target = "thumbv7em-none-eabi"

[dependencies]
nv1-msg = { path = "../nv1-msg" }

corncobs = "0.1.3"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "nightly",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = [
    "memory-x",
    "stm32f446re",
    "time-driver-any",
    "exti",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
heapless = "0.8.0"
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
pid = "4.0.0"
postcard = "1.0.10"
embedded-alloc = "0.6.0"
libm = "0.2.11"
midly = { version = "0.5.3", default-features = false }
stm32-metapac = "16.0.0"
embedded-hal = "0.2.7"

[[bin]]
name = "nv1-md"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = 3
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
