[package]
name = "nv1-ros-communicator"
version = "0.1.0"
edition = "2021"

[dependencies]
nv1-msg = { rev = "3eaad74", git = "https://github.com/NOPLAB/nv1-msg" }

r2r.workspace = true
futures.workspace = true
tokio.workspace = true

corncobs = "0.1.3"
serialport = "4.5.0"
system_shutdown = "4.0.1"
postcard = { version = "1.0.10", features = ["use-std"] }
jetgpio-sys = { version = "0.2.1", features = ["orin"] }
