[package]
name = "nv1-ros-onnx"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r.workspace = true
futures.workspace = true
tokio.workspace = true
clap.workspace = true

cudarc = { version = "0.13.0", features = ["cuda-version-from-build-system"] }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.5", features = ["load-dynamic", "cuda"] }
